<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/audio_settings_title"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title_sampling" />

    <RadioGroup
        android:id="@+id/rg_sampling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_high"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mid"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_low"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title_format" />

    <RadioGroup
        android:id="@+id/rg_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_mp3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_mp3"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_ogg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_ogg"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_amr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_amr"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rb_m4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_m4a"
            android:textSize="12sp" />
    </RadioGroup>
</LinearLayout>